--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -39,6 +39,11 @@
   margin-left: 20px;
 }
 
+.footer__lowest-block__about-yandex-githublink:hover {
+  opacity: 0.7;
+}
+
+
 /* media 900*/
 @media screen and (max-width: 900px) {
   .footer {
