--- a/src/components/Movies/MoreButton/MoreButton.css
+++ b/src/components/Movies/MoreButton/MoreButton.css
@@ -22,6 +22,10 @@
   /* border: 5px solid #000; */
 }
 
+.more-button:hover {
+  opacity: 0.8;
+}
+
 @media screen and (max-width: 900px) {
   .more-button-area {
     padding-left: 30px;
