--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -53,6 +53,14 @@
   background-size: cover;
 }
 
+.movies-card__description__icon:hover {
+  opacity: 0.8;
+}
+
+.movies-card__description__icon_saved:hover {
+  opacity: 0.8;
+}
+
 @media screen and (max-width: 1270px) {
   .movies-card {
     width: 339px;
