--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -26,6 +26,10 @@
   cursor: pointer;
 }
 
+.navigation__link:hover {
+  opacity: 0.7;
+}
+
 .navigation__link-promo {
   font-size: 13px;
   line-height: 1.38;
@@ -33,6 +37,10 @@
   border: none;
   text-decoration: none;
   cursor: pointer;
+}
+
+.navigation__link-promo:hover {
+  opacity: 0.7;
 }
 
 .navigation__account {
@@ -47,7 +55,7 @@
 }
 
 .navigation__account__link {
-  font-weight: 500;
+  font-weight: 400;
   font-size: 14px;
   line-height: 1.14;
   color: black;
@@ -56,14 +64,22 @@
   cursor: pointer;
 }
 
+.navigation__account__link:hover {
+  opacity: 0.7;
+}
+
 .navigation__account__link-promo {
-  font-weight: 500;
+  font-weight: 400;
   font-size: 14px;
   line-height: 1.14;
   color: white;
   border: none;
   text-decoration: none;
   cursor: pointer;
+}
+
+.navigation__account__link-promo:hover {
+  opacity: 0.7;
 }
 
 .navigation__account__entrance-button {
@@ -79,6 +95,14 @@
   font-weight: 500;
   font-size: 12px;
   line-height: 1.33;
+}
+
+.navigation__account__entrance-button:hover {
+  opacity: 0.8;
+}
+
+.navigation__link_active {
+  font-weight: 500;
 }
 
 @media screen and (max-width: 900px) {
