--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -38,6 +38,10 @@
   cursor: pointer;
 }
 
+.input__find-button:hover {
+  opacity: 0.8;
+}
+
 .short-films {
   display: flex;
   margin-top: 30px;
