--- a/src/components/WelcomeForm/WelcomeForm.css
+++ b/src/components/WelcomeForm/WelcomeForm.css
@@ -30,6 +30,11 @@
   outline: none;
 }
 
+.welcome-form__form__input:focus {
+  background-color: rgba(255, 104, 56, 0.1);
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+}
+
 .welcome-form__form__input__error-msg {
   margin-top: 10px;
   font-weight: 400;
