--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -27,6 +27,10 @@
   outline: none;
 }
 
+/* .input__entry-field:focus {
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+} */
+
 .input__find-button {
   width: 34px;
   height: 34px;
