fix: ready for rev2

--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -16,13 +16,17 @@
 }
 
 .input__entry-field {
-  width: 100%;
+  width: 80%;
   font-size: 28px;
   font-weight: 500;
   letter-spacing: 2px;
   border: none;
   text-align: center;
   outline: none;
+}
+
+.input__entry-field:focus {
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
 }
 
 .input__find-button {
