--- a/src/components/Movies/Preloader/Preloader.css
+++ b/src/components/Movies/Preloader/Preloader.css
@@ -49,6 +49,24 @@
   padding: 20px;
 }
 
+.preloader::before {
+  content: "";
+  display: flex;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  /* align-items: center;
+  justify-content: center; */
+  z-index: 9;
+  /* visibility: hidden; */
+  background-color: rgba(0, 0, 0, 0.1);
+  /* opacity: 0;
+  transition: visibility 1s, opacity 1s; */
+  /* opacity: 0.5; */
+}
+
 .preloader__container {
   width: 100px;
   height: 100px;
