feat: make MinutesToHoursAndMinutes

--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -43,6 +43,7 @@
   /* background-image: url(../../images/unsave-cross.svg); */
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: top;
   cursor: pointer;
 }
 
