--- a/src/components/Movies/Preloader/Preloader.css
+++ b/src/components/Movies/Preloader/Preloader.css
@@ -43,8 +43,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 100%;
-  height: 100%;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
   z-index: 10;
   padding: 20px;
 }
@@ -57,14 +60,8 @@
   bottom: 0;
   left: 0;
   right: 0;
-  /* align-items: center;
-  justify-content: center; */
   z-index: 9;
-  /* visibility: hidden; */
   background-color: rgba(0, 0, 0, 0.1);
-  /* opacity: 0;
-  transition: visibility 1s, opacity 1s; */
-  /* opacity: 0.5; */
 }
 
 .preloader__container {
