--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -3,9 +3,17 @@
   margin: 68px auto 30px;
 }
 
-.nothing-found-image {
+.nothing-found-image-block {
   display: flex;
   justify-content: center;
+  /* width: 600px;
+  height: 312px;
+  margin: auto; */
+}
+
+.nothing-found-image {
+  width: 60%;
+  height: auto;
 }
 
 .movies-card-list {
@@ -20,7 +28,7 @@
 
 .search-error-message {
   text-align: center;
-  color: rgba(238, 52, 101, 1);;
+  color: rgba(238, 52, 101, 1);
   font-size: 20px;
 }
 
