--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -18,7 +18,7 @@
   display: grid;
   margin: auto;
   grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(4, 1fr);
+  /* grid-template-rows: repeat(4, 1fr); */
   row-gap: 30px;
   column-gap: 24px;
   list-style-type: none;
@@ -35,7 +35,7 @@
     row-gap: 36px;
     column-gap: 30px;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(4, 1fr);
+    /* grid-template-rows: repeat(4, 1fr); */
   }
 }
 
@@ -47,6 +47,6 @@
   .movies-card-list {
     row-gap: 16px;
     grid-template-columns: repeat(1, 1fr);
-    grid-template-rows: repeat(5, 1fr);
+    /* grid-template-rows: repeat(5, 1fr); */
   }
 }
