--- a/src/components/WelcomeForm/WelcomeForm.css
+++ b/src/components/WelcomeForm/WelcomeForm.css
@@ -42,8 +42,21 @@
   color: rgba(238, 52, 101, 1);
 }
 
+.welcome-form__button__error-msg {
+  display: flex;
+  justify-content: center;
+  align-items: end;
+  text-align: center;
+  color: rgba(255, 0, 76, 1);
+  font-size: 11px;
+  line-height: 1.21;
+  margin-top: -4px;
+  width: 100%;
+  height: 30px;
+}
+
 .welcome-form__button {
-  margin-top: 46px;
+  margin-top: 20px;
   margin-bottom: 16px;
   width: 100%;
   height: 45px;
@@ -100,8 +113,12 @@
     margin-bottom: 83px;
   }
 
+  .welcome-form__button__error-msg {
+    margin-top: 82px;
+  }
+
   .welcome-form__button {
-    margin-top: 135px;
+    margin-top: 20px;
     margin-bottom: 14px;
     font-size: 12px;
   }
