--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -52,6 +52,32 @@
   margin: 5px 0 17px;
 }
 
+.profile__save-btn {
+  margin-top: 20px;
+  margin-bottom: 16px;
+  width: 100%;
+  height: 45px;
+  border-radius: 3px;
+  border: none;
+  background-color: rgba(255, 104, 56, 1);
+  font-family: "Inter", "Atial", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  color: white;
+  cursor: pointer;
+}
+
+.profile__save-btn_disabled {
+  background-color: rgba(248, 248, 248, 1);
+  cursor: auto;
+  color: black;
+}
+
+.profile__save-btn:not([disabled]):hover {
+  opacity: 0.8;
+}
+
 .profile__update-btn {
   font-size: 13px;
   font-weight: 400;
