--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -39,7 +39,7 @@
   caret-color: black;
 }
 
-.profile__form__input__error-msg{
+.profile__form__input__error-msg {
   height: 11px;
   /* margin-top: 10px; */
   font-weight: 400;
@@ -63,8 +63,6 @@
   width: 100%;
   height: 30px;
 }
-
-
 
 .profile__save-btn {
   margin-top: 20px;
@@ -112,6 +110,35 @@
   cursor: pointer;
   color: rgba(238, 52, 101, 1);
 }
+
+.profile__success-notification {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #2be080;
+  color: #fff;
+  padding: 15px;
+  border-radius: 5px;
+  text-align: center;
+  z-index: 999;
+  opacity: 0;
+  animation: fadeInOut 0.8s ease-in-out forwards;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+}
+
+@keyframes fadeInOut {
+  0% {
+    opacity: 0;
+    transform: translate(-50%, -70%);
+  }
+  100% {
+    opacity: 1;
+    transform: translate(-50%, -50%);
+  }
+}
+
+
 
 @media screen and (max-width: 900px) {
   .profile {
