--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -45,7 +45,7 @@
   border: none;
   background-color: white;
   align-self: center;
-  /* background-image: url(../../images/unsave-cross.svg); */
+  background-image: url(../../images/unsave-cross.svg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: top;
