--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -28,6 +28,7 @@
   text-align: center;
   color: rgba(238, 52, 101, 1);
   font-size: 20px;
+  margin-bottom: 50px;
 }
 
 @media screen and (max-width: 1200px) {
