--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -22,7 +22,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: end;
+  align-items: flex-end;
 }
 .profile__form__input {
   height: 10px;
@@ -53,7 +53,7 @@
 .profile-form__button__error-msg {
   display: flex;
   justify-content: center;
-  align-items: end;
+  align-items: flex-end;
   text-align: center;
   color: rgba(255, 0, 76, 1);
   font-size: 11px;
