ref: remove mems ((

--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -25,7 +25,16 @@
 
 .search-error-message {
   text-align: center;
+  margin: 0 20px;
   color: rgba(238, 52, 101, 1);
+  font-size: 20px;
+  margin-bottom: 50px;
+}
+
+.search-info-message {
+  text-align: center;
+  margin: 0 20px;
+  color: #2be080;
   font-size: 20px;
   margin-bottom: 50px;
 }
