fix: сделал правильное появление скролла

--- a/src/components/Burger/BurgerButton/BurgerButton.css
+++ b/src/components/Burger/BurgerButton/BurgerButton.css
@@ -74,6 +74,10 @@
   transition: all 0.5s;
 }
 
+.overflow-hidden {
+  overflow: hidden;
+}
+
 @media screen and (max-width: 900px) {
   .burger-button {
     display: block;
